@@ -63,7 +63,9 @@
 #
 # gcc -std=c99 -g -c -o testfile-sizes3.o sizes.c
 
-testfiles testfile-sizes1.o testfile-sizes2.o testfile-sizes3.o
+# The file testfile-size4.o is hand-crafted.
+
+testfiles testfile-sizes1.o testfile-sizes2.o testfile-sizes3.o testfile-sizes4.o
 
 testrun_compare ${abs_builddir}/aggregate_size -e testfile-sizes1.o <<\EOF
 c size 1
@@ -102,6 +104,10 @@ sa size 128
 d3d size 480
 f size 4
 b size 4
+EOF
+
+testrun_compare ${abs_builddir}/aggregate_size -e testfile-sizes4.o <<\EOF
+v size 257
 EOF
 
 exit 0
